--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,6 @@
     "requirejs-plugins": "~1.0.2",
     "lodash" : "~1.3.1",
     "jquery" : "2.0.3",
-    "skrollr" : "0.6.11",
-    "pxloader" : "https://github.com/thinkpixellab/PxLoader/archive/master.zip",
-    "soundmanager2" : "https://github.com/scottschiller/SoundManager2/archive/V2.97a.20130512.zip"
+    "skrollr" : "0.6.11"
   }
 }
