--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "requirejs-plugins": "~1.0.2",
     "lodash" : "~1.3.1",
     "jquery" : "2.0.3",
-    "skrollr" : "0.6.11"
+    "skrollr" : "0.6.11",
+    "bowser" : "*"
   }
 }
